<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp15"
    android:paddingRight="@dimen/dp15"
    tools:context=".ui.TrainFinishActivity">


    <FrameLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_train_trophy"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:textColor="@color/common_gray_color"
                android:textSize="@dimen/sp13"
                tools:text="2020-06-02 18:20:20"></TextView>

            <TextView
                android:id="@+id/tv_train_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:drawableLeft="@mipmap/icon_train_complete"
                android:drawablePadding="@dimen/dp5"
                android:text="@string/finish_train_times"
                android:textColor="@color/common_view_color"
                android:textSize="@dimen/sp28"></TextView>

            <TextView
                android:id="@+id/tv_course_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp20"
                android:lines="2"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/sp17"
                tools:text="超级增肌"></TextView>

            <TextView
                android:id="@+id/tv_train_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp15"
                android:drawableLeft="@mipmap/icon_train_time"
                android:drawablePadding="@dimen/dp5"
                android:text="@string/text_train_duration"
                android:textColor="@color/common_view_color"
                android:textSize="@dimen/sp13"></TextView>

            <TextView
                android:id="@+id/tv_consume_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp8"
                android:drawableLeft="@mipmap/icon_train_consume"
                android:drawablePadding="@dimen/dp5"
                android:text="@string/train_consume_cal"
                android:textColor="@color/common_view_color"
                android:textSize="@dimen/sp13"></TextView>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="@dimen/dp18"
                android:src="@mipmap/share_app_logo"></ImageView>
        </LinearLayout>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp5"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp5"
        app:cardCornerRadius="@dimen/dp6"
        app:cardElevation="@dimen/dp6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="13dp"
            android:paddingBottom="@dimen/dp20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp15"
                android:text="@string/train_free"
                android:textColor="@color/common_text_color"
                android:textSize="@dimen/sp17"></TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginTop="13dp"
                android:layout_marginRight="@dimen/dp15"
                android:background="@color/common_item_line_color"></View>

            <RadioGroup
                android:id="@+id/rg_train_feel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_not_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/dp28"
                    android:layout_marginRight="@dimen/dp28"
                    android:button="@null"
                    android:drawableTop="@mipmap/icon_not_good_unselected"
                    android:drawablePadding="@dimen/dp5"
                    android:text="@string/train_not_good"
                    android:textColor="@color/common_gray_color"></RadioButton>

                <RadioButton
                    android:id="@+id/rbtn_normal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@mipmap/icon_normal_unselected"
                    android:drawablePadding="@dimen/dp5"
                    android:gravity="center"
                    android:text="@string/train_normal"
                    android:textColor="@color/common_gray_color"></RadioButton>

                <RadioButton
                    android:id="@+id/rbtn_good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dp28"
                    android:layout_marginRight="@dimen/dp28"
                    android:button="@null"
                    android:drawableTop="@mipmap/icon_good_unselected"
                    android:drawablePadding="@dimen/dp5"
                    android:text="@string/very_good"
                    android:textColor="@color/common_gray_color"></RadioButton>
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>