<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TrainVideoActivity">

    <com.jkcq.train.ZVideoView
        android:id="@+id/videoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.jkcq.train.ZVideoView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/dp10"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_train_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sp28"
            android:textStyle="bold"
            tools:text="12:00"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_time"
            android:textColor="@color/white"
            android:textSize="@dimen/sp13"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_vedio_pause"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_black_70"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_video_exit"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp100"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_play_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_video_continue_train"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:text="@string/continue_train"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17"></TextView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_play_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_linear_white_to_black"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
          android:progressDrawable="@drawable/layer_progress_green"
            android:layout_height="@dimen/dp4"
            android:progress="0"></ProgressBar>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp20">
            <ImageView
                android:id="@+id/iv_play_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp19"
                android:layout_marginLeft="@dimen/dp14"
                android:layout_marginBottom="@dimen/dp14"
                android:src="@mipmap/icon_play_stop"></ImageView>

            <TextView
                android:id="@+id/tv_play_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                tools:text="12:00/14:00"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp17"></TextView>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>